deploy-7 modify vue app localhost to use render json-server

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/postcss": "^4.0.9",
     "@tailwindcss/vite": "^4.0.9",
     "axios": "^1.8.1",
+    "cors": "^2.8.5",
     "json-server": "^1.0.0-beta.3",
     "primeicons": "^7.0.0",
     "tailwindcss": "^4.0.9",
